fixed some alignment issues on smaller resolutions

--- a/theming/_variables.scss
+++ b/theming/_variables.scss
@@ -73,4 +73,22 @@ footer {
 .homepage-tile:hover{
     filter: drop-shadow(-3px 11px 44px rgba(0, 0, 0, 0.3));
 }
+
+.center {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
+.intro {
+    margin-right: 320px !important;
+}
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    [class*="intro"] {
+      margin-right: 0 !important;
+    }
+  }
 ///////
